@@ -1,9 +1,9 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage2/Attic/stage2-controller.sh,v 1.3 2005/07/05 21:53:41 wolf31o2 Exp $
-. ${clst_sharedir}/targets/support/functions.sh
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage2/Attic/stage2-controller.sh,v 1.4 2005/12/19 15:28:42 wolf31o2 Exp $
 
+. ${clst_sharedir}/targets/support/functions.sh
 
 # Only put commands in this section that you want every target to execute.
 # This is a global default file and will affect every target
@@ -11,25 +11,20 @@ case $1 in
 	enter)
 		${clst_CHROOT} ${clst_chroot_path}
 	;;
-
 	run)
 		shift
 		export clst_packages="$*"
-		exec_in_chroot ${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh
+		exec_in_chroot \
+			${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh
 	;;
-
 	preclean)
 		exec_in_chroot ${clst_sharedir}/targets/${clst_target}/${clst_target}-preclean-chroot.sh ${clst_root_path}
 	;;
-
 	clean)
 		exit 0
 	;;
-	
 	*)
 		exit 1
 	;;
-
 esac
-
 exit $?
