@@ -1,11 +1,11 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage2/Attic/stage2-preclean-chroot.sh,v 1.8 2005/12/08 15:16:48 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage2/Attic/stage2-preclean-chroot.sh,v 1.9 2005/12/19 15:28:42 wolf31o2 Exp $
 
 . /tmp/chroot-functions.sh
-update_env_settings
 
+update_env_settings
 
 if [ -n "${clst_CCACHE}" ]
 then
@@ -18,4 +18,3 @@ then
 fi
 
 rm -f /var/log/emerge.log
-
